<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home" />

    <item
        android:id="@+id/Donatefood"
        android:title="@string/donate_food"
        android:icon="@drawable/ic_baseline_local_dining_24"/>

    <item
        android:id="@+id/Requestfood"
        android:title="@string/request_food"
        android:icon="@drawable/ic_baseline_food_bank_24"/>


    <item
        android:id="@+id/search"
        android:title="@string/search_near_me"
        android:icon="@drawable/ic_baseline_search_24"/>

    <item
        android:id="@+id/about"
        android:title="@string/about_us"
        android:icon="@drawable/ic_baseline_group_24"/>


</menu>