<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context=".SignUpActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/green"
    tools:context=".SignUpActivity"
    android:orientation="vertical">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/help2"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bungee"
        android:text="@string/welcome"
        android:layout_marginTop="-40dp"
        android:textSize="38sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/marko_one"
        android:text="@string/sign_up_to_start_your_journey"
        android:layout_marginTop="-25dp"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="2dp"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/firstName"
            app:boxStrokeColor="@color/gray"
            app:hintTextColor="@color/puce"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/full_name"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:drawableLeft="@drawable/ic_baseline_person_24"
                android:drawablePadding="10dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/user"
            app:boxStrokeColor="@color/gray"
            app:hintTextColor="@color/puce"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/username"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:drawableLeft="@drawable/ic_baseline_person_24"
                android:drawablePadding="10dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            app:boxStrokeColor="@color/gray"
            app:hintTextColor="@color/puce"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/email"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:drawableLeft="@drawable/ic_baseline_email_24"
                android:drawablePadding="10dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/phone"
            app:boxStrokeColor="@color/gray"
            app:hintTextColor="@color/puce"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/phone_no"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:drawableLeft="@drawable/ic_baseline_phone_iphone_24"
                android:drawablePadding="10dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/userPass"
            app:boxStrokeColor="@color/gray"
            app:hintTextColor="@color/puce"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/password"
            app:passwordToggleEnabled="true"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sign Up"
        android:id="@+id/btnSignUp"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/marko_one"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Clear"
        android:id="@+id/btnClear"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/marko_one"
        />


    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="353dp"
        android:layout_height="38dp"
        android:backgroundTint="@color/green"
        android:fontFamily="@font/marko_one"
        android:text="@string/already_have_an_account_login"
        android:textColor="@color/black" />


</LinearLayout>
</ScrollView>