<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/green"
    tools:context=".RequestFood">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        tools:context=".Donate">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/volun2" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:fontFamily="@font/bungee"
            android:layout_marginTop="20dp"
            android:text="@string/request_to_get_food"
            android:textColor="@color/red"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/bungee"
            android:text="@string/kindly_provide_necessary_information"
            android:layout_marginTop="10dp"
            android:textColor="@color/brown"
            android:textSize="16sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="25dp"
            tools:layout_editor_absoluteY="238dp" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Name"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/gray"
                android:layout_width="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/name">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:drawableLeft="@drawable/ic_baseline_person_24"
                    android:drawablePadding="10dp"
                    />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/MOBILE_NUMBER"

                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/gray"
                android:layout_width="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/mobile_number">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:drawableLeft="@drawable/ic_baseline_phone_iphone_24"
                    android:drawablePadding="10dp"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:fontFamily="@font/marko_one"
            android:text="@string/quantity_enough_to_feed_minimum"
            android:textColor="@color/brown"
            android:textSize="20sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="25dp"
            tools:layout_editor_absoluteY="238dp" />


        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/FULL_ADDRESS"

                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/gray"
                android:layout_width="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/full_address">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:drawableLeft="@drawable/ic_baseline_location_on_24"
                    android:drawablePadding="10dp"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/foodType"

                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/gray"
                android:layout_width="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/notes_what_type_of_food_can_you_do">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:drawableLeft="@drawable/ic_baseline_fastfood_24"
                    android:drawablePadding="10dp"
                    />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="7dp"
            android:fontFamily="@font/marko_one"
            android:text="@string/notes_once_you_submit_the_form_a_volunteer_in_your_locality_will_reach_out_to_you_for_more_information"
            android:textColor="@color/red"
            android:textSize="16sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="25dp"
            tools:layout_editor_absoluteY="238dp" />




        <Button
            android:id="@+id/btnLocation"
            android:layout_width="230dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/round"
            android:textSize="18sp"
            android:text="@string/customize_location"
            android:backgroundTint="@color/puce"
            android:fontFamily="@font/marko_one"
            android:textColor="@color/white"


            />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/round"
            android:text="submit"
            android:textSize="18sp"
            android:backgroundTint="@color/puce"
            android:fontFamily="@font/marko_one"
            android:textColor="@color/white" />
        <Button
            android:id="@+id/btnClear"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/round"
            android:text="Clear"
            android:textSize="18sp"
            android:backgroundTint="@color/puce"
            android:fontFamily="@font/marko_one"
            android:textColor="@color/white" />

    </LinearLayout>

</ScrollView>